# akashi

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: deploy.yml
frontend/: app.html  index.html  verify.html
scripts/: e2e.sh
src/: anchor.rs  ids.rs  ledger.rs  lib.rs  main.rs  store.rs
